--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,7 +54,7 @@
       </section>
 
       <blockquote>
-        <p>The best way out is always through <br>-Robert Frost</p>
+        <p>Just Do it! <br>-Nike</p>
       </blockquote>
 
       <section class="left">
